[project]
name = "rbn"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "quantumish", email = "freifeld.david@gmail.com" }
]
dependencies = ["pyvis~=0.3.2", "annotated_types~=0.4.0", "bitarray~=2.7.3"]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["isort~=6.0.0b2", "black~=23.3.0", "mypy~=1.2.0", "pdoc~=13.1.1", "flameprof~=0.4", "line_profiler~=4.0.3"]
